--- a/tailwind.html
+++ b/tailwind.html
@@ -7,9 +7,18 @@
     <title>Tailwind CSS</title>
 </head>
 <body>
-    <article class="flex justify-center p-4">
+    <article class="flex justify-center p-4 gap-4">
         <button class="bg-[#0d6efd] border border-[#0d6efd] text-white py-[0.375rem] px-3 leading-normal rounded-md hover:bg-[#0b5ed7]">Tailwind</button>
+        <button class="btn-primary">Tailwind</button>
+        <button class="btn-primary sm:text-xl lg:text-sm">Tailwind</button>
     </article>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style type="text/tailwindcss">
+        @layer components {
+            .btn-primary {
+                @apply bg-[#0d6efd] border border-[#0d6efd] text-white py-[0.375rem] px-3 leading-normal rounded-md hover:bg-[#0b5ed7];
+            }
+        }
+    </style>
 </body>
 </html>
