--- a/bootstrap.html
+++ b/bootstrap.html
@@ -25,8 +25,7 @@
         }
 
         .image-wrap {
-            border: 1px
-             solid rgba(17,17,17,.1) 
+            border: 1px solid rgba(17, 17, 17, .1);
         }
 
         .text-container {
@@ -61,12 +60,9 @@
 
 <body>
     <div class="d-flex justify-content-center p-3">
-        <button class="btn btn-primary">Bootstrap</button>
-    </div>
-    <div class="d-flex justify-content-center p-3">
         <div class="card-container">
             <a class="image-wrap d-block w-100 ratio ratio-1x1" href="/">
-                <img class="w-full h-full" />
+                <img class="w-full h-full" src="./image.png"/>
             </a>
             <div class="text-container d-flex flex-column">
                 <div class="d-flex justify-content-between mb-3">
