--- a/tailwind.html
+++ b/tailwind.html
@@ -15,7 +15,8 @@
                         primary: '#0d6efd',
                         dark: {
                             '800': '#808080'
-                        }
+                        },
+                        border: '#111111a'
                     }
                 }
             }
@@ -32,16 +33,10 @@
 
 <body>
     <div class="flex justify-center p-4 gap-4">
-        <button
-            class="bg-[#0d6efd] border border-[#0d6efd] text-white py-[0.375rem] px-3 leading-normal rounded-md hover:bg-[#0b5ed7]">Tailwind</button>
-        <button class="btn-primary">Tailwind</button>
-        <button class="btn-primary sm:text-xl lg:text-sm">Tailwind</button>
-    </div>
-    <div class="flex justify-center p-4 gap-4">
         <div class="group w-[290px] hover:-translate-y-2.5 duration-300">
             <a class="block w-full aspect-square group-hover:shadow-[0_10px_10px_-5px_#0000000a,_0_20px_25px_-5px_#0000001a]"
                 href="/">
-                <img class="w-full h-full border border-[rgba(17,17,17,.1)]" />
+                <img class="w-full h-full border border-border" src="image.png" />
             </a>
             <div class="flex flex-col pt-[18px] pb-3.5">
                 <div class="flex justify-between mb-4">
