--- a/tailwind.html
+++ b/tailwind.html
@@ -27,9 +27,21 @@
             }
         }
     </script>
+    <style type="text/tailwindcss">
+        @layer components {
+            .btn-primary {
+                @apply bg-[#0d6efd] border border-[#0d6efd] text-white py-[0.375rem] px-3 leading-normal rounded-md hover:bg-[#0b5ed7];
+            }
+        }
+    </style>
 </head>
 
 <body>
+    <div class="flex justify-center p-4 gap-4">
+        <button class="bg-[#0d6efd] border border-[#0d6efd] text-white py-[0.375rem] px-3 leading-normal rounded-md hover:bg-[#0b5ed7]">Tailwind</button>
+        <button class="btn-primary">Tailwind</button>
+        <button class="btn-primary text-4xl sm:text-3xl md:text-2xl lg:text-xl">Tailwind</button>
+    </div>
     <div class="flex justify-center p-4 gap-4">
         <div class="group w-[290px] hover:-translate-y-2.5 duration-300">
             <a class="block w-full aspect-square group-hover:shadow-3xl" href="/">
