--- a/bootstrap.html
+++ b/bootstrap.html
@@ -11,6 +11,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
+        .btn-responsive {
+            font-size: 36px;
+
+            @media (min-width: 640px) {
+                font-size: 30px;
+            }
+
+            @media (min-width: 768px) {
+                font-size: 24px;
+            }
+
+            @media (min-width: 1024px) {
+                font-size: 20px;
+            }
+        }
+
         .card-container {
             width: 290px;
             transition-duration: 300ms;
@@ -64,6 +80,10 @@
 </head>
 
 <body>
+    <div class="d-flex justify-content-center p-3 gap-4">
+        <button class="btn btn-primary">Bootstrap</button>
+        <button class="btn btn-primary btn-responsive">Bootstrap</button>
+    </div>
     <div class="d-flex justify-content-center p-3">
         <div class="card-container">
             <a class="image-wrap d-block w-100 ratio ratio-1x1" href="/">
