--- a/core-concept.html
+++ b/core-concept.html
@@ -12,21 +12,28 @@
 <body class="flex items-center">
 <div class="flex flex-col m-auto w-96 justify-center p-4 gap-4">
     <div class="flex flex-col gap-2">
-        <h1>Utility-First Fundamentals</h1>
+        <h1 class="font-bold">Utility-First Fundamentals</h1>
         <button class="bg-[#0d6efd] border border-[#0d6efd] text-white py-[0.375rem] px-3 leading-normal rounded-md">Tailwind</button>
     </div>
     <div class="flex flex-col gap-2">
-        <h1>Hover, Focus, and Other States</h1>
+        <h1 class="font-bold after:content-['*'] after:ml-0.5 after:text-red-500">Hover, Focus, and Other States</h1>
         <button class="bg-[#0d6efd] border border-[#0d6efd] text-white py-[0.375rem] px-3 leading-normal rounded-md hover:bg-[#0b5ed7]">Tailwind</button>
+        <button class="bg-[#0d6efd] border border-[#0d6efd] text-white py-[0.375rem] px-3 leading-normal rounded-md hover:bg-[#0b5ed7] disabled:bg-slate-300 disabled:border-slate-300 disabled:cursor-not-allowed" disabled>Tailwind</button>
+        <div class="group cursor-pointer">
+            <h2 class="text-xl group-hover:text-red-500">Group</h2>
+            <p class="group-hover:text-blue-500">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+        </div>
     </div>
     <div class="flex flex-col gap-2">
-        <h1>Responsive Styles</h1>
+        <h1 class="font-bold">Responsive Styles</h1>
         <p class="text-3xl sm:text-2xl md:text-xl lg:text-base">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
     </div>
     <div class="flex flex-col gap-2">
-        <h1>Reusing Styles</h1>
+        <h1 class="font-bold">Reusing Styles</h1>
         <style type="text/tailwindcss">
             @layer components {
                 .btn {
@@ -40,7 +47,7 @@
         <button class="btn btn-primary">Tailwind</button>
     </div>
     <div class="flex flex-col gap-2">
-        <h1>Custom Styles</h1>
+        <h1 class="font-bold">Custom Styles</h1>
         <script>
             tailwind.config = {
                 theme: {
